--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="header-superior">
             <div class="logo">
-                <a href="#"><img src="/img/JC/default_765x625.png" alt=""></a>
+                <a href="#"><i class="fa-solid fa-microchip" style="color: #ffffff;"></i></a>
             </div>
             <div class="header-text">
                 <a href="#section1">Inicio</a>
@@ -36,6 +36,12 @@
                     eficientes e bem estruturados.
                 </p>
             </div>
+            <div class="icones"><i class="fa-brands fa-html5"></i>
+                <i class="fa-brands fa-css3-alt"></i>
+                <i class="fa-brands fa-square-js"></i>
+                <i class="fa-solid fa-database"></i>
+                <i class="fa-brands fa-node"></i>
+                <i class="fa-brands fa-php"></i></div>
         </section>
         <section id="section2">
             <h2>Habilidades</h2>
